# natural-ecosystem-flood-attenuation-simulator

./: .gitignore  README.md  pyproject.toml  run_model.py
examples/: minimal_config.yaml
src/nefas/: __init__.py  cli.py  config.py  engine.py  logging.py  preprocessing.py  rainfall_simulation.py  runner.py  simulation.py
tests/: test_config.py  test_engine.py  test_preprocessing.py  test_rainfall_simulation.py  test_simulation.py
